# Self-Healing-Codebase-Agent

./: .gitignore  CLAUDE.md  pyproject.toml
docs/: architecture.md  escalation-schema.md  loop-design.md
examples/broken_auth/: auth.py  test_auth.py
healer/: __main__.py  escalation.py  loop.py  state.py
healer/agents/: diagnoser.py  fixer.py  reviewer.py
healer/tools/: git.py  patcher.py  runner.py
tests/: test_diagnoser.py  test_escalation.py  test_loop.py  test_patcher.py  test_runner.py  test_state.py
