[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "self-healing-agent"
version = "0.1.0"
description = "Autonomous agent that detects failing tests, diagnoses root causes, and writes fixes"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "gitpython>=3.1.40",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
self-healer = "healer.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["healer*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
